@@ -1,5 +1,6 @@
 2011-02-02  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #17434: Pagetree: when start edit, the text should be selected
 	* Fixed bug #17406: Pagetree Editor remains with empty value
 
 2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>
